# gallsh-rust

./: .gitignore  Cargo.toml  README.md  current_files  deletions  reinhardt  result  selected_files  selections  slow_debug.md  tags  touches
src/: args.rs  direction.rs  entries.rs  entry.rs  graphics.rs  gui.rs  image.rs  image_data.rs  main.rs  navigator.rs  order.rs  paths.rs  picture_io.rs  rank.rs  repository.rs
temp/: entries.rs
testdata/: 020_African_blue_flycatcher_at_Kibale_forest_National_Park_Photo_by_Giles_LaurentIMAGE_DATA.json  Continental_I-1430_NASM.jpgIMAGE_DATA.json  Continental_I-1430_NASMIMAGE_DATA.json  DAN-13-Danzig-100_Mark_(1922)IMAGE_DATA.json  Johannes_Vermeer_-_Lady_at_the_Virginal_with_a_Gentleman,_'The_Music_Lesson'_-_Google_Art_Project.jpgIMAGE_DATA.json  Johannes_Vermeer_-_Lady_at_the_Virginal_with_a_Gentleman,_'The_Music_Lesson'_-_Google_Art_ProjectIMAGE_DATA.json  UN_Fight_for_Freedom_Leslie_Ragan_1943_poster_-_restoration1IMAGE_DATA.json  Vela_supernova_-_VST_-_Eso2214a.jpgIMAGE_DATA.json  Vela_supernova_-_VST_-_Eso2214aIMAGE_DATA.json  file_example_PNG_500kBIMAGE_DATA.json  reading_list
