[package]
name = "gsr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
predicates = "3.1.0"
clap = { version = "4.3.19", features = ["derive"] }
gtk = { version = "0.6.*", package = "gtk4", features = ["v4_6"] }
rand = "0.8.5"
walkdir = "2.3.3"
clap-num = "1.1.1"
thumbnailer = "0.5.1"
mime = "0.3.17"
regex = "1.10.4"
image = "0.25.1"
